--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<canvas id="game"></canvas>
 		<script src="lib/three.js"></script>
 		<script src="lib/PointerLockControls.js"></script>
-        <script src="main.js"></script>
+		<script src="lobby.js"></script>
+		<script src="game.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
