basic character look

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="lib/normalize.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<svg class="cross" height="10" width="10">
+			<circle cx="5" cy="5" r="5" />
+		</svg>
 		<canvas id="game"></canvas>
 		<script src="lib/three.js"></script>
 		<script src="lib/PointerLockControls.js"></script>
