--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="lib/three.js"></script>
 		<script src="lib/PointerLockControls.js"></script>
 		<script src="lobby.js"></script>
+		<script src="player.js"></script>
 		<script src="game.js"></script>
 		<script src="main.js"></script>
 	</body>
