--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script src="lib/PointerLockControls.js"></script>
 		<script src="lobby.js"></script>
 		<script src="player.js"></script>
+		<script src="timeline.js"></script>
 		<script src="game.js"></script>
 		<script src="main.js"></script>
 	</body>
