rewrite of everything for new timeline

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		</svg>
 		<canvas id="game"></canvas>
 		<script src="lib/three.js"></script>
-		<script src="deepcopy.js"></script>
+		<script src="lib/deepcopy.js"></script>
 		<script src="lobby.js"></script>
 		<script src="player.js"></script>
 		<script src="timeline.js"></script>
