--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<svg class="cross" height="10" width="10">
-			<circle cx="5" cy="5" r="5" />
-		</svg>
+		<div class="cross">
+			<svg height="10" width="10">
+				<circle cx="5" cy="5" r="5" />
+			</svg>
+			<span class="info">0:0</span>
+		</div>
 		<canvas id="game"></canvas>
 		<script src="lib/three.js"></script>
 		<script src="lib/deepcopy.js"></script>
