another gui experiment

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		</div>
 		<canvas id="game"></canvas>
 		<script src="lib/three.js"></script>
+		<script src="lib/optimer_regular.typeface.js"></script>
 		<script src="lib/deepcopy.js"></script>
 		<script src="lobby.js"></script>
 		<script src="player.js"></script>
