--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src="lib/optimer_regular.typeface.js"></script>
 		<script src="lib/deepcopy.js"></script>
 		<script src="lobby.js"></script>
+		<script src="sendmessage.js"></script>
 		<script src="player.js"></script>
 		<script src="timeline.js"></script>
 		<script src="game.js"></script>
