broke out ticker, first use of sendmessage

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script src="lib/deepcopy.js"></script>
 		<script src="lobby.js"></script>
 		<script src="sendmessage.js"></script>
+		<script src="ticker.js"></script>
 		<script src="player.js"></script>
 		<script src="timeline.js"></script>
 		<script src="game.js"></script>
