mega refactoring, splitting and stuff

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 		<script src="lib/three.js"></script>
 		<script src="lib/optimer_regular.typeface.js"></script>
 		<script src="lib/deepcopy.js"></script>
-		<script src="lobby.js"></script>
-		<script src="sendmessage.js"></script>
-		<script src="ticker.js"></script>
-		<script src="player.js"></script>
-		<script src="timeline.js"></script>
-		<script src="game.js"></script>
-		<script src="main.js"></script>
+		<script src="js/lobby.js"></script>
+		<script src="js/sendmessage.js"></script>
+		<script src="js/ticker.js"></script>
+		<script src="js/player.js"></script>
+		<script src="js/timeline.js"></script>
+		<script src="js/graphics.js"></script>
+		<script src="js/timemap.js"></script>
+		<script src="js/input.js"></script>
+		<script src="js/game.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
