more network prepping

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<script src="js/timemap.js"></script>
 		<script src="js/input.js"></script>
 		<script src="js/game.js"></script>
+		<script src="js/network.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
