Many hours of training later. Requires cross site scripting

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<span class="info"></span>
 		</div>
 		<canvas id="game"></canvas>
-
 		<script src="lib/three.js"></script>
+		<script src="lib/OBJLoader.js"></script>
 		<script src="lib/optimer_regular.typeface.js"></script>
 		<script src="lib/deepcopy.js"></script>
 		<script src="js/lobby.js"></script>
