--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,8 @@
 		</div>
 		<canvas id="game"></canvas>
 		<script src="lib/three.js"></script>
+		<script src='lib/threex.skymap.js'></script>
+		<script src='lib/threex.texturecube.js'></script>
 		<script src="lib/OBJLoader.js"></script>
 		<script src="lib/optimer_regular.typeface.js"></script>
 		<script src="lib/deepcopy.js"></script>
