map, collision map

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,8 @@
 
 		<!-- Assets -->
 		<script id="gun" src="assets/grandfather_gun.js"></script>
+		<script id="gun" src="assets/clock_map.js"></script>
+		<script id="gun" src="assets/collision_map.js"></script>
 
 		<!-- Source -->
 		<script src="js/lobby.js"></script>
