removed user-select and right click closing #8

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="style.css">
 		<title>Looptime - a  non-linear multiplayer fps game</title>
 	</head>
-	<body>
+	<body oncontextmenu="return false;">
 		<div class="map">
 			<canvas></canvas>
 		</div>
