--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,8 @@
 		<script src="js/ticker.js"></script>
 		<script src="js/sendmessage.js"></script>
 		<script src="js/player.js"></script>
+		<script src="js/playerevent.js"></script>
+		<script src="js/playermodel.js"></script>
 		<script src="js/replaywave.js"></script>
 		<script src="js/timewave.js"></script>
 		<script src="js/timeline.js"></script>
