--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
 		<script src="js/player.js"></script>
 		<script src="js/playerevent.js"></script>
 		<script src="js/playermodel.js"></script>
+		<script src="js/handleevent.js"></script>
 		<script src="js/replaywave.js"></script>
 		<script src="js/timewave.js"></script>
 		<script src="js/timeline.js"></script>
