--- a/client/index.html
+++ b/client/index.html
@@ -31,18 +31,18 @@
 		<!-- Source -->
 		<script src="js/lobby.js"></script>
 		<script src="js/game.js"></script>
-		<script src="js/ticker.js"></script>
-		<script src="js/sendmessage.js"></script>
-		<script src="js/player.js"></script>
-		<script src="js/playerevent.js"></script>
-		<script src="js/playermodel.js"></script>
-		<script src="js/handleevent.js"></script>
-		<script src="js/replaywave.js"></script>
-		<script src="js/timewave.js"></script>
-		<script src="js/timeline.js"></script>
-		<script src="js/graphics.js"></script>
-		<script src="js/input.js"></script>
-		<script src="js/timemap.js"></script>
+		<script src="js/logic/ticker.js"></script>
+		<script src="js/graphics/sendmessage.js"></script>
+		<script src="js/player/player.js"></script>
+		<script src="js/player/playerevent.js"></script>
+		<script src="js/player/playermodel.js"></script>
+		<script src="js/logic/handleevent.js"></script>
+		<script src="js/time/replaywave.js"></script>
+		<script src="js/time/timewave.js"></script>
+		<script src="js/time/timeline.js"></script>
+		<script src="js/graphics/graphics.js"></script>
+		<script src="js/logic/input.js"></script>
+		<script src="js/time/timemap.js"></script>
 		<script src="js/network.js"></script>
 		<script src="js/main.js"></script>
 	</body>
